--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,16 @@
             android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             >
         <activity
+                android:name=".makeScreenByFrag.MainActivity"
+                android:exported="true"
+                >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
                 android:name=".SampleFragment"
                 android:exported="true"
                 >
