--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,24 @@
 			  android:supportsRtl = "true"
 			  android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
 			  >
+			
+			
+			<activity
+					android:name = ".SampleService.MainActivity"
+					android:exported = "true"
+					>
+				  <intent-filter>
+						<action android:name = "android.intent.action.MAIN" />
+						
+						<category android:name = "android.intent.category.LAUNCHER" />
+				  </intent-filter>
+			</activity>
+			
+			<service
+					android:name = ".SampleService.MyService"
+					android:exported = "true"
+					></service>
+			
 			<activity
 					android:name = ".SampleDrawer.MainActivity"
 					android:exported = "true"
