--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,10 @@ android {
     }
 }
 
+
 dependencies {
+
+    implementation 'com.github.pedroSG94:AutoPermissions:1.0.3'
 
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
