--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,179 +1,203 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-		xmlns:android = "http://schemas.android.com/apk/res/android"
-		package = "com.example.day2"
-		>
-	  
-	  <application
-			  android:allowBackup = "true"
-			  android:icon = "@mipmap/ic_launcher"
-			  android:label = "@string/app_name"
-			  android:roundIcon = "@mipmap/ic_launcher_round"
-			  android:supportsRtl = "true"
-			  android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
-			  >
-			
-			
-			<activity
-					android:name = ".SampleService.MainActivity"
-					android:exported = "true"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			
-			<service
-					android:name = ".SampleService.MyService"
-					android:exported = "true"
-					></service>
-			
-			<activity
-					android:name = ".SampleDrawer.MainActivity"
-					android:exported = "true"
-					android:label = "@string/title_activity_main"
-					android:theme = "@style/Theme.AppCompat.Light.NoActionBar"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SamplePager.MainSamplePagerActivity"
-					android:exported = "true"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SampleTab2.MainActivity"
-					android:exported = "true"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SampleTab.MainActivity"
-					android:exported = "true"
-					android:theme = "@style/Theme.AppCompat.NoActionBar"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SampleActionBar2.MainActivity"
-					android:exported = "true"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SampleActionBar1.MainActivity"
-					android:exported = "true"
-					android:theme = "@style/Theme.AppCompat.Light"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".useActionBar.MainActivity"
-					android:exported = "true"
-					android:label = "액션바 사용하기"
-					android:theme = "@style/Theme.AppCompat.Light"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".makeScreenByFrag.MainActivity"
-					android:exported = "true"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SampleFragment"
-					android:exported = "true"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SampleLifeCycle"
-					android:exported = "true"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SampleTask"
-					android:exported = "true"
-					android:launchMode = "singleTop"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".SampleParcelable"
-					android:exported = "false"
-					/>
-			<activity
-					android:name = ".SampleCallIntent"
-					android:exported = "true"
-					>
-				  <intent-filter>
-						<action android:name = "android.intent.action.MAIN" />
-						
-						<category android:name = "android.intent.category.LAUNCHER" />
-				  </intent-filter>
-			</activity>
-			<activity
-					android:name = ".MenuActivity"
-					android:exported = "true"
-					android:label = "메뉴 액티비티"
-					/>
-			<activity
-					android:name = ".SampleLayoutInflater"
-					android:exported = "true"
-					/>
-			<activity
-					android:name = ".MainActivity"
-					android:exported = "true"
-					/>
-	  </application>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.day2"
+    >
+    <!-- 해당 앱에서 SMS을 수신하기 위한 권한입니다. -->
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        >
+        <activity
+            android:name=".SampleReceiver.SmsReceiverActivity"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        
+        <receiver
+            android:name=".SampleReceiver.SmsReceiver"
+            android:enabled="true"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter >
+            <!-- SMS 메시지가 들어간 인텐트를 구분하기 위한 액션 정보입니다. -->
+            <!-- 단말기에서 SMS를 수신했을 때 action 정보가 들어간 인텐트를 전달하므로 해당 값을 넣어주면 SMS 를 받아볼 수 있습니다. -->
+        </receiver >
+        
+        <activity
+            android:name=".SampleService.MainActivity"
+            android:exported="true"
+            android:label="서비스 시작하기"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        
+        <service
+            android:name=".SampleService.MyService"
+            android:exported="true"
+            />
+        
+        <activity
+            android:name=".SampleDrawer.MainActivity"
+            android:exported="true"
+            android:label="@string/title_activity_main"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SamplePager.MainSamplePagerActivity"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleTab2.MainActivity"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleTab.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleActionBar2.MainActivity"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleActionBar1.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.AppCompat.Light"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".useActionBar.MainActivity"
+            android:exported="true"
+            android:label="액션바 사용하기"
+            android:theme="@style/Theme.AppCompat.Light"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".makeScreenByFrag.MainActivity"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleFragment"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleLifeCycle"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleTask"
+            android:exported="true"
+            android:launchMode="singleTop"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleParcelable"
+            android:exported="false"
+            />
+        <activity
+            android:name=".SampleCallIntent"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".MenuActivity"
+            android:exported="true"
+            android:label="메뉴 액티비티"
+            />
+        <activity
+            android:name=".SampleLayoutInflater"
+            android:exported="true"
+            />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            />
+    </application >
 
-</manifest>
+</manifest >
