--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.day2"
     >
-    
     <!-- 해당 앱에서 SMS을 수신하기 위한 권한입니다. -->
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" /> <!-- 외부 스토리지를 읽고 쓰는 권한입니다. -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     
     <application
         android:allowBackup="true"
@@ -15,6 +16,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         >
+        <activity
+            android:name=".SamplePermissions.MainPermissionsActivity"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
+            android:name=".SampleReceiver.MainActivity"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        
         <receiver
             android:name=".SampleReceiver.SmsReceiver"
             android:enabled="true"
@@ -33,11 +55,10 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
-        
         <activity
             android:name=".SampleService.MainActivity"
             android:exported="true"
@@ -45,7 +66,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -63,7 +84,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -73,7 +94,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -83,7 +104,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -94,7 +115,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -104,7 +125,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -115,7 +136,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -127,7 +148,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -137,7 +158,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -147,7 +168,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -157,7 +178,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -168,7 +189,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
@@ -182,7 +203,7 @@
             >
             <intent-filter >
                 <action android:name="android.intent.action.MAIN" />
-                
+    
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter >
         </activity >
