--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,16 @@
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         >
         <activity
+            android:name=".SampleTweenAnimation.MainActivity"
+            android:exported="true"
+            >
+            <intent-filter >
+                <action android:name="android.intent.action.MAIN" />
+    
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter >
+        </activity >
+        <activity
             android:name=".SampleSpinner.MainActivity"
             android:exported="true"
             >
