--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,8 @@ android {
 dependencies {
 
     implementation 'com.github.pedroSG94:AutoPermissions:1.0.3'
-
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
